# ag-ui-compatible-openwebui

./: README.md
src/owui-pipe/: .gitignore  README.md  pipe.py  pyproject.toml  request.json  test_middleware_example.py
src/pydantic_ai_agent/: README.md  main.py  pyproject.toml  test_state_example.py
