[project]
name = "owui-pipe"
version = "0.1.0"
description = "OpenWebUI middleware pipe that forwards requests to AG-UI compatible endpoints and transforms responses back"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "open-webui>=0.6.5",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
]
